v0.0.12    Fri, 25 Mar 2016 18:24:16 +0900
  - 운송장번호를 보여줌 (#14)
  - 목록에서 운송장번호를 clipboard 에 복사하는 버튼 추가 (#11)
  - Add helper clothes2link
  - 사용자 검색
  - Add helper clothes_quantity
  - Add helper generate_discard_code

v0.0.11    Sat, 12 Mar 2016 14:41:58 +0900
  - 기증안내 이미지 추가 (#9)

v0.0.10    Thu, 10 Mar 2016 11:56:11 +0900
  - 팬츠 대신에 바지/스커트 (#8)
  - 기증안내에 관련된 내용 수정 (#8)
  - SMS 내용변경 (#8)

v0.0.9    Tue, 08 Mar 2016 18:35:36 +0900
  - 동의하지 않거나 재능나눔의 의사가 있는 주문서를 강조

v0.0.8    Wed, 02 Mar 2016 17:55:01 +0900
  - 반납일이 입력되었다면 항상 보여줌
  - 반송일 기준으로 반송신청목록의 정렬
  - 목록에서 반송일을 표시

v0.0.7    Wed, 02 Mar 2016 16:03:49 +0900
  - 반송신청후에 반송일을 표시

v0.0.6    Mon, 29 Feb 2016 19:14:40 +0900
  - 개인정보수집동의서 와 기증메세지 작성 동의

v0.0.5    Mon, 29 Feb 2016 14:59:51 +0900
  - SMS 에서의 반송신청 URL 을 올바르게 수정

v0.0.4    Thu, 25 Feb 2016 19:27:01 +0900
  - 모두 남성으로 보이는 버그 수정
  - 토요일은 반송신청 불가
  - Guide 에서 기증신청서 링크제거
  - 이름만 검색했을때 안나오는 버그 수정
  - 전화번호의 포맷을 010-xxxx-xxxx 로 변경
  - 신청서와 대여이력이 다르다면 알려줌

v0.0.3    Tue, 23 Feb 2016 14:39:48 +0900
  - /form/:id 가 나타나지 않는 버그 수정

v0.0.2    Tue, 23 Feb 2016 14:30:40 +0900
  - 사용자등록 버튼 추가
  - SMS 를 보낼 수 있는 기능 추가

v0.0.1    Mon, 22 Feb 2016 18:32:01 +0900
  - initial release